tests/models/struct/unnamed/vec/fail/max_length.stderr
error: Support condition is min_items, max_items, alias and validate
 --> tests/models/struct/unnamed/vec/fail/max_length.rs:2:1
  |
2 | #[model]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
